Fix img box-shadow being cropped in the x-axis
Former-commit-id: 1f3b109555603cb10d8eaad1489f34d505c0d18f [formerly 241a5af62d7f093916cf57254c6dfeac38714269]
Former-commit-id: d7b7e763ea31effc6c56b8241304a12c7db81003

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,7 +43,7 @@ nav {
 main {
   padding-left: 4rem;
   grid-area: content;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 footer {
